[project]
name = "dragonfly-db-commons"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vipyr Security Developers", email = "support@vipyrsec.com"},
]
dependencies = [
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.6.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
